gtk/sass/3.22/_3rd-party.scss
/* ... */
// /************
//  * Lollypop *
//  ************/

window > headerbar > widget > box.horizontal {
  > grid.horizontal > button.toggle.image-button {
    min-width: $icon_size * 1.5;
    min-height: $icon_size * 1.5;
    padding: if($ref_weight < 1.0,
             rem(($widget_size - $icon_size * 1.5 - 2px) / 2),
             rem(($widget_size - $icon_size * 1.5) / 2));
  }

  > button.image-button {
    min-width: $icon_size * 1.5;
    min-height: $icon_size * 1.5;
    margin: -2px 0;
    padding: if($ref_weight < 1.0,
             rem(($widget_size - $icon_size * 1.5 - 2px) / 2),
             rem(($widget_size - $icon_size * 1.5) / 2));
  }
}

// left-pane styling
window.background > grid.vertical > stack > paned.horizontal > widget {
  grid.vertical > scrolledwindow {
    background-color: $secondary_dark_color;

    &:dir(ltr) {
      box-shadow: if($variant == 'light', $sidebar-light-ltr,
                                          $sidebar-dark-ltr);
    }
    &:dir(rtl) {
      box-shadow: if($variant == 'light', $sidebar-light-rtl,
                                          $sidebar-dark-rtl);
    }

    > treeview.view.sidebar {
      background-color: transparent;
      font-weight: 500;
    }
  }
}

// playlists styling
window.background > grid.vertical > stack > paned.horizontal {
  > paned.horizontal > grid grid > grid {
    button.flat.image-button { // back to square button
      &, &.toggle {
        border-radius: 2px;
        -gtk-outline-radius: 2px;
      }
    }
  }
}

row.trackrow {
  &, &playing {
    // lollypop can not understand outer marigns
    button.image-button:not(.text-button) { margin: 0; }
  }
}

.track-menu-button { // back to square button
  border-radius: 2px;
  -gtk-outline-radius: 2px;
}


// /***************************
//  * Cinnamon-Control-Center *
//  ***************************/

window.background:not(.csd) > box.vertical {
  > stack > scrolledwindow > viewport,
  > scrolledwindow > viewport {
    iconview {
      &, &.view {
        background-color: transparent;
        &:selected {
          @extend %selected_items;

          label { color: $selected_fg_color; }
        }
      }
    }

    box.vertical > toolbar {
      border: none;
      background-color: $bg_color;
      box-shadow: none;

      *:not(button) > label {
        padding: rem(5.3px, $sw: 1.0);
        color: $tertiary_fg_color;
      }
    }

    box.vertical > list {
      &, > row {
        background-image: none;
        background-color: $base_color;
        transition-duration: 0s;
        &:hover,
        &:active { // unset hover/active effects
          background-image: none;
          background-color: transparent;
          transition-duration: 0s;
          animation: none;
        }
        &:selected { @extend %selected_items; }
      }
    }
  }
}
/* ... */

